--- a/sections/about.tex
+++ b/sections/about.tex
@@ -2,15 +2,21 @@
 \name{\href{https://dhruvkb.github.io/}{Dhruv Bhanushali}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{-2mm}
+{\noindent\large I am a
 \ifdocoriented
-  \noindent{\large\spacegrotesk\textcolor{cyan}{Technical writer}}
+  {\textcolor{cyan}{\textbf{technical writer.}}}
 \else
-  \noindent{\large\spacegrotesk\textcolor{blue}{Software developer}}
+  {\textcolor{blue}{\textbf{software developer.}}}
 \fi
+\vspace{2mm}
+}
 
-\intro
-{\href{mailto:dhruvkb@ph.iitr.ac.in}{\textcolor{secondary}{\fasEnvelope}~~dhruvkb@ph.iitr.ac.in}}
-{\href{tel:+918171615670}{\textcolor{secondary}{\fasPhone}~~+91 8171615670}}
-{\href{https://github.com/dhruvkb}{\textcolor{secondary}{\fabGitHub}~/~dhruvkb}}
-{\href{https://www.linkedin.com/in/dhruvkb}{\textcolor{secondary}{\fabLinkedIn}~/~dhruvkb}}
+\noindent\intro
+{\href{mailto:dhruvkb@ph.iitr.ac.in}
+{\textcolor{secondary}{\iconEmail}~dhruvkb@ph.iitr.ac.in}}
+{\href{tel:+918171615670}
+{\textcolor{secondary}{\iconPhone}~+91 8171615670}}
+{\href{https://github.com/dhruvkb}
+{\textcolor{secondary}{\iconGitHub}~/dhruvkb}}
+{\href{https://www.linkedin.com/in/dhruvkb}
+{\textcolor{secondary}{\iconLinkedIn}~/in/dhruvkb}}
