--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,11 +1,13 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Education}{Education}{green}{\fasUniversity}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Education}{Education}{\iconGraduationHat}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\datedsubsection{IIT Roorkee}
-{\href{https://www.iitr.ac.in/}{Indian Institute of Technology Roorkee}}
-{Bachelor of Technology (B. Tech.)}
-{2015 -- 2019}
-{Engineering Physics}
+\timedsubsection
+{IIT Roorkee}% Label
+{\href{https://www.iitr.ac.in/}{Indian Institute of Technology Roorkee}}% Text
+{Bachelor of Technology (B. Tech.)}% Subtext
+{2015 -- 2019}% Time period
+{Engineering Physics}% Attribute#2
+{\iconNetwork}% Icon#2
 
-\vspace{-0.4cm}% To make up for the lack of a section description
+\vspace{-2mm}% To make up for the lack of a section description
