--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,39 +1,46 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Experience}{Experience}{green}{\fasBriefcase}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Experience}{Experience}{\iconBriefcase}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\onsiteexperiencesubsection{Software @ FamPay}% Keyword
-{Software engineer}% Role
-{\href{https://fampay.in/}{FamPay}}% Organisation
-{November -- December, 2019}% Time period
-{Bengaluru, India}% Location
-
-\sectiondescription{
-  \begin{itemize}[nosep, leftmargin=*]
-    \item Wrote the core transaction API of the platform.
-    \item Integrated with the Cashfree payment gateway.
-    \item Developed transaction SMS notification system.
-    \item Developed the support engine of the platform.
-  \end{itemize}
-}
-
-\datedsubsection{Software @ Creative Commons}% Keyword
+\experiencesubsection%
+{Software @ Creative Commons}% Label
 {Software engineer}% Role
 {\href{https://creativecommons.org/}{Creative Commons}}% Organisation
-{April -- September, 2019}% Time period
-{Google Summer of Code}% Location
+{April 2019 -- Present}% Time period
+{Google Summer of Code}% Attribute#2
+{\iconGoogle}% Icon#2
 
 \sectiondescription{
   \begin{itemize}[nosep, leftmargin=*]
-    \item Developed Vocabulary, a cohesive design system.
-    \item Revamped the UI of CC Search, powered by Vocabulary.
-    \item Initiated Vocabulary integration into other CC projects.
-    \item Contributed features and patches to the CC Catalog API.
+    \item Developed the Vocabulary design system and Vue.js bindings.
+    \item Collaborated in decision-making with design and dev team.
+    \item Identified areas of improvement and spearheaded changes.
+    \item Nurtured an active developer community around the project.
+    \item Initiated and helped Vocabulary integration with CC sites.
+    \item Pushed features and patches to back \& front end of CC Seach.
   \end{itemize}
 }
 
-\onsiteexperiencesubsection{Infrastructure @ HackerEarth}% Keyword
-{Infrastructure engineer}% Role
+\experiencesubsection%
+{Outreachy mentor @ Creative Commons}% Label
+{Outreachy mentor}% Role
+{\href{https://creativecommons.org/}{Creative Commons}}% Organisation
+{November, 2019 -- March, 2020}% Time period
+{Remote}% Attribute#2
+{\iconHome}% Icon#2
+
+\sectiondescription{
+  \begin{itemize}[nosep, leftmargin=*]
+    \item Triaged issues and reviewed PRs during application period.
+    \item Helped new contributors identify easier issues to get started.
+    \item Offered code help on Slack and reviewed draft proposals.
+    \item Guided my mentee to gain first-hand FOSS work-experience.
+  \end{itemize}
+}
+
+\onsiteexperiencesubsection%
+{Infrastructure @ HackerEarth}% Label
+{Infrastructure engineer (intern)}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2018}% Time period
 {Bengaluru, India}% Location
@@ -49,8 +56,9 @@
   \end{itemize}
 }
 
-\onsiteexperiencesubsection{Software @ HackerEarth}% Keyword
-{Software engineer}% Role
+\onsiteexperiencesubsection%
+{Software @ HackerEarth}% Label
+{Software engineer (intern)}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2017}% Time period
 {Bengaluru, India}% Location
@@ -66,11 +74,13 @@
   \end{itemize}
 }
 
-\onsiteexperiencesubsection{CTC @ IMG}% Keyword
+\experiencesubsection%
+{CTC @ IMG}% Label
 {Chief technology coordinator}% Role
 {\href{https://img.channeli.in/}{Information Management Group}}% Organisation
 {2016 -- 2019}% Time period
-{IIT Roorkee}% Location
+{IIT Roorkee}% Attribute#2
+{\iconInstitute}% Icon#2
 
 \sectiondescription{
   Information Management Group (IMG) is the student body that developed, manages
