--- a/sections/opensource.tex
+++ b/sections/opensource.tex
@@ -1,30 +1,31 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Open source}{Open source}{green}{\fasLockOpen}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Open source}{Open source}{\iconLockOpen}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\worksubsection{Vocabulary}% Keyword
+\worksubsection%
+{Vocabulary}% Label
 {\href{https://creativecommons.github.io/cc-vocabulary/}{Vocabulary}}% Title
-{Design system}% What?
+{Design system}% Category
 {May 2019 -- Present}% Time period
-{Vue, Styleguidist, Storybook}% Tech stack
+{Sass; Vue.js; Storybook}% Tech stack
 
 \sectiondescription{
-  Vocabulary is a cohesive design system to unite the web facing Creative 
-  Commons~\fabCreativeCommons.
+  Vocabulary is a cohesive design system, and Vue.js components implementing it,
+  to unite the web facing \iconCreativeCommons~Creative~Commons.
   \begin{itemize}[nosep, leftmargin=*]
-    \item Developed close to 40 components for the project.
-    \item Wrote the documentation and styleguide for the library.
-    \item Developed an interactive playground for the components.
-    \item Deployed all these products to GitHub Pages and \href{https://cc-vocabulary.netlify.com}{Netlify}.
-    \item Identified easy issues to encourage beginner contributors.
-    \item Published the library to \href{https://www.npmjs.com/package/@creativecommons/vocabulary}{npm}, jsDelivr and unpkg.
+    \item Planned the code locations and repository structure.
+    \item Developed Sass styles and corresponding Vue.js components.
+    \item Integrated the documentation with an interactive Storybook.
+    \item Setup visual regression tests and CI/ CD for \href{https://cc-vocabulary.netlify.com}{docs} and \href{https://www.npmjs.com/package/@creativecommons/vocabulary}{builds}.
+    \item Synchronized coded components with Figma requirements.
   \end{itemize}
 }
 
 
-\worksubsection{Omniport backend}% Keyword
+\worksubsection%
+{Omniport backend}% Label
 {\href{https://github.com/IMGIITRoorkee/omniport-backend/}{Omniport backend}}% Title
-{Campus portal platform}% What?
+{Campus portal platform}% Category
 {March 2018 -- Present}% Time period
 {Django; React}% Tech stack
 
@@ -35,7 +36,7 @@
     \item Planned it to be unopinionated to suit any institute's needs.
     \item Developed Omniport to be generic but customisable.
     \item Developed extension capability with plug-and-play apps.
-    \item Developed latest features such HTTP/2 and WebSockets.
+    \item Developed latest features such as HTTP/2 and WebSockets.
     \item Added OAuth2 provider functionality for 3rd-party auth.
     \item Launched as a mobile responsive progressive web app.
     \item Composed the Django backend, all core apps and services.
@@ -44,9 +45,10 @@
 }
 
 \ifdocoriented
-\worksubsection{Omniport documentation}% Keyword
+\worksubsection%
+{Omniport documentation}% Label
 {\href{https://omniport.readthedocs.io/}{Omniport documentation}}% Title
-{Holistic documentation}% What?
+{Holistic documentation}% Category
 {March 2018 -- Present}% Time period
 {Sphinx}% Tech stack
 
@@ -64,9 +66,10 @@
   \end{itemize}
 }
 \else
-\worksubsection{Omniport infrastructure}% Keyword
+\worksubsection%
+{Omniport infrastructure}% Label
 {\href{https://github.com/IMGIITRoorkee/omniport-docker/}{Omniport infrastructure}}% Title
-{Container deployment}% What?
+{Container deployment}% Category
 {March 2018 -- Present}% Time period
 {Docker (+Compose); Bash}% Tech stack
 
