--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,10 +1,28 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Projects}{Projects}{green}{\fasCubes}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Projects}{Projects}{\iconCubes}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\worksubsection{Placement \& Internship portal}% Keyword
+\worksubsection%
+{Personal website}% Label
+{\href{https://dhruvkb.github.io/}{Personal website}}% Title
+{Portfolio}% Category
+{September 2019 -- Present}% Time period
+{Sass; Vue.js; Serverless $f$}% Tech stack
+
+\sectiondescription{
+  My portfolio is my small personal slice of the Internet.
+  \begin{itemize}[nosep, leftmargin=*]
+    \item Revamped online portfolio to use the modern JAMStack.
+    \item Integrated a highly functional 'terminal emulator'-emulator.
+    \item Utilised the Solarized theme with both light and dark modes.
+    \item Set up serverless APIs and continuous deployment. 
+  \end{itemize}
+}
+
+\worksubsection%
+{Placement \& Internship portal}% Label
 {Placement \& Internship portal}% Title
-{Omniport application}% What?
+{Omniport application}% Category
 {August -- November, 2018}% Time period
 {Django; React}% Tech stack
 
@@ -15,7 +33,7 @@
   \begin{itemize}[nosep, leftmargin=*]
     \item Added features to the app like test and interview calendar.
     \item Added the ability to submit a cover letter with application.
-    \item Mentored developers of the revamped Omniport version.
+    \item Mentored the developers of the revamped Omniport version.
     \item Mentored the developers of the Android companion app.
   \end{itemize}
 }
