--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,8 +1,10 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Skills}{Skills}{green}{\fasLightbulb}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Skills}{Skills}{\iconLightbulb}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\sgsubsection{Languages (+frameworks)}{Computer languages (+frameworks)}
+\resumeonesubsection
+{Computer languages (+frameworks)}
+{Computer languages (+frameworks):}
 \sectiondescription
 {
 reStructuredText (+Sphinx),
@@ -17,7 +19,9 @@ PHP, HTML, Markdown
 \textit{and, of course,} {\fontfamily{lmr}\selectfont\LaTeX}
 }
 
-\sgsubsection{Software}{Computer software}
+\resumeonesubsection
+{Computer software}
+{Computer software:}
 \sectiondescription
 {
 Git,
