--- a/sections/writings.tex
+++ b/sections/writings.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Writings}{Writings}{green}{\fasPenNib}
+\colouredsection{Writings}{Writings}{\fasPenNib}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \worksubsection{Blogs}% Keyword
