Improve text about learning

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -74,7 +74,8 @@ for me.
 
   \item \textbf{Constant learning.} Every task I've taken up at CC has presented
   opportunities to learn things I would never have explored otherwise. I am
-  fortunate to have learned so much from the CC team from the reviews on my PRs.
+  fortunate to have learned so much from the CC team, from PR reviews to the
+  research involved in the task.
 
   \item \textbf{Welcoming team.} I'm grateful to the CC team for providing me
   with a chance to be a part of something bigger than myself and to participate
