Remove CC-specific content

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -6,12 +6,11 @@
 
 \setlength{\parskip}{\baselineskip} % Leave a line between paragraphs
 \vspace{-0.5cm}
-Dear Creative Commons team,
+Dear Hiring Manager,
 
 I am \textbf{Dhruv Bhanushali}, and this is my application for a full-time role
-at Creative Commons as a \textbf{Frontend engineer}. Let me go over the reasons
-why I believe I am a perfect fit for the role, and why the role is a perfect fit
-for me.
+as a \textbf{software engineer}. Let me go over the reasons why I believe I am a
+perfect fit for the role, and why the role is a perfect fit for me.
 
 \textcolor{green}{Why me?}
 \begin{itemize}[nosep, parsep=1mm, leftmargin=*]
@@ -60,72 +59,11 @@ for me.
   and help new contributors get started.
 \end{itemize}
 
-\textcolor{green}{Why Frontend engineer @ CC?} 
-\begin{itemize}[nosep, parsep=1mm, leftmargin=*]
-  \item \textbf{Steadfast mentorship.} Thanks to the mentorship from Hugo Solar,
-  Vocabulary which was formerly my independent proposal for GSoC '19, became a
-  reality after months of efforts with over 300 commits and over 17 alpha
-  releases.
-
-  \item \textbf{Community involvement.} I have become so deeply involved with
-  the sub-community that has sprung up around Vocabulary, that to stay in the
-  loop, I went on to work four additional contracts and also mentored for
-  Outreachy twice.
-
-  \item \textbf{Constant learning.} Every task I've taken up at CC has presented
-  opportunities to learn things I would never have explored otherwise. I am
-  fortunate to have learned so much from the CC team, from PR reviews to the
-  research involved in the task.
-
-  \item \textbf{Welcoming team.} I'm grateful to the CC team for providing me
-  with a chance to be a part of something bigger than myself and to participate
-  in their product sync-ups, engineering meetings and even game-nights!
-
-  \item \textbf{Opportunity for impact.} As a developer, I immensely value the
-  opportunity to make a positive impact on the lives of end users or other
-  developers. CC products, with their far reach and diverse userbase, provide
-  ample number of such opportunities.
-\end{itemize}
-
-\textcolor{green}{Why me for Frontend engineer @ CC?}
-\raggedright\begin{itemize}[nosep, parsep=1mm, leftmargin=*]
-  \item \textbf{The position would come as a natural transition for me.} Because
-  I am performing quite a few of the primary responsibilities even today, such
-  as improving and mentoring the integration of Vocabulary, I can start
-  generating value immediately.
-
-  \item \textbf{I have contributed to CC Search before.} During the application
-  period before GSoC, I was solving bugs and implementing features in both the
-  backend and frontend of CC Search. During this period, I collaborated with
-  Breno Ferreira and Alden Page.
-
-  \item \textbf{I'm one of the founding members of Vocabulary.} I've not only
-  seen but instead played a part in the evolution of the project over time. I've
-  seen the code, and the community around it, evolve, grow and take on a life of
-  its own.
-
-  \item \textbf{I have experience in working remotely.} Having worked with CC
-  remotely for over a year, from the very first GSoC to the very recent
-  mentorship, I have become familiar with the ways of working (and making
-  friends) in a remote environment.
-
-  \item \textbf{I can bring diverse perspectives to the table.} I am proficient
-  in many aspects of web development from Python backends to Vue.js frontends to
-  the Dockerised deployments. To some extent, I can also provide feedback in
-  terms of UI/UX.
-
-  \item \textbf{I have positive references from the CC team.} Both Hugo Solar
-  and Breno Ferreira, who have mentored me in the past, will surely have some
-  \href{https://www.linkedin.com/in/dhruvkb/}{positive testimonials} and vouch
-  for me.
-\end{itemize}
-
 I would request you to please take a moment to review my résumé, which follows
 this page. I genuinely believe I have the dedication, skills and experience
 needed not only to get the job done but also done well. If any more information
-is required of me, I'll be happy to provide it. I have been looking forward to
-an opportunity like this for many months and would be thrilled if I got to
-continue my journey with CC on a deeper level.
+is required of me, I'll be happy to provide it. I would be thrilled if I got to
+further my career with your organisation.
 
 Thank you for considering my application and reading through this verbose cover
 letter!
