Refactor for modular builds

--- a/columns/right.tex
+++ b/columns/right.tex
@@ -1,6 +1,6 @@
 \input{sections/skills.tex}
 \input{sections/opensource.tex}
-\ifdocoriented
+\if\docoriented1
   \input{sections/writings.tex}
 \else
   \input{sections/projects.tex}
