--- a/sections/about.tex
+++ b/sections/about.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 {\noindent\large I am a
-\ifdocoriented
+\if\docoriented1
   {\textcolor{cyan}{\textbf{technical writer.}}}
 \else
   {\textcolor{blue}{\textbf{software developer.}}}
