--- a/sections/opensource.tex
+++ b/sections/opensource.tex
@@ -44,7 +44,7 @@
   \end{itemize}
 }
 
-\ifdocoriented
+\if\docoriented1
 \worksubsection%
 {Omniport documentation}% Label
 {\href{https://omniport.readthedocs.io/}{Omniport documentation}}% Title
