--- a/sections/writings.tex
+++ b/sections/writings.tex
@@ -1,19 +1,21 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Writings}{Writings}{\fasPenNib}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Writings}{Writings}{\iconNotes}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\worksubsection{Blogs}% Keyword
+\worksubsection%
+{Blogs}% Label
 {Blogs}% Title
-{Thoughts to words}% What?
+{Thoughts to words}% Category
 {Occasional, intermittent}% Time period
-{WordPress; Medium; Lektor}% Tech
+{WordPress; Medium; Lektor}% Tech stack
 
 \sectiondescription{
   I sometimes write blog posts on various experiences from my life, both 
   technical as well as non-technical.
   \begin{itemize}[nosep, leftmargin=*]
-    \item ``Life As A Member of IMG'' on \href{https://medium.com/img-iit-roorkee/life-as-a-member-of-img-9ed65e439dc}{Medium}
-    \item ``Some lessons for an old IIT from a new one'' on \href{https://medium.com/@dhruvkb/some-lessons-for-an-old-iit-from-a-new-one-6e1d499c8df2}{Medium}
-    \item Blogs about CC Vocabulary on \href{https://creativecommons.github.io/blog/authors/dhruvkb}{Creative Commons}.
+    \item \href{https://medium.com/img-iit-roorkee/life-as-a-member-of-img-9ed65e439dc}{``Life As A Member of IMG''} on Medium.
+    \item \href{https://medium.com/@dhruvkb/some-lessons-for-an-old-iit-from-a-new-one-6e1d499c8df2}{``Some lessons for an old IIT from a new one''} on Medium.
+    \item \href{https://dhruvkb.writeas.com/}{My personal blog} on Write.as.
+    \item \href{https://creativecommons.github.io/blog/authors/dhruvkb}{Blog posts} about Vocabulary on Creative Commons.
   \end{itemize}
 }
