Change fonts to match portfolio site

--- a/sections/about.tex
+++ b/sections/about.tex
@@ -3,10 +3,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 {\noindent\large I am a
-\if\docoriented1
-  {\textcolor{cyan}{\textbf{technical writer.}}}
-\else
-  {\textcolor{blue}{\textbf{software developer.}}}
+\if\docoriented1%
+  {\textcolor{cyan}{\jetbrainsmono\textbf{technical writer.}}}
+\else%
+  {\textcolor{blue}{\jetbrainsmono\textbf{software developer.}}}
 \fi
 \vspace{2mm}
 }
