Add a smiling kaomoji to the cover letter

--- a/cover.tex
+++ b/cover.tex
@@ -75,4 +75,6 @@ Regards,\\
 Dhruv Bhanushali
 \setlength{\parskip}{0cm} % Leave no space between paragraphs
 
+\vfill
+\textcolor{secondary}{( ˇ ▽ ˇ )/}
 \pagebreak
