Add GraphQL as a skill

--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -10,7 +10,7 @@
 reStructuredText (+Sphinx),
 Python (+Django, Django REST Framework),
 Java (+Swing, JavaFX, Ant, Android),
-JavaScript/Node.js (+Storybook, Styleguidist, Jest, Vue, Vuex, Vue Router, React, Angular),
+JavaScript/Node.js (+Storybook, Styleguidist, Jest, Vue, Vuex, Vue Router, React, Angular, GraphQL),
 Kotlin (+Android),
 CSS (+Stylus, Sass),
 Ruby (+Rails), Golang,
